Sample code for a dock window.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(${KDE4_INCLUDES})
 
-set(KDock_SRCS main.cpp)
+set(KDock_SRCS main.cpp DockWindow.cpp)
 kde4_add_executable(KDock ${KDock_SRCS})
 
 target_link_libraries(KDock ${KDE4_KDEUI_LIBS})
