Basic dock features. A initial implementation for drag & drop, still flicks.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,17 @@
+project(KDock)
+
+find_package(KDE4 REQUIRED)
+find_package(X11 REQUIRED)
+
+include(KDE4Defaults)
+add_definitions(${QT_DEFINITIONS} ${KDE4_DEFINITIONS})
+
 include_directories(${KDE4_INCLUDES})
 
-set(KDock_SRCS main.cpp DockWindow.cpp)
+set(KDock_SRCS main.cpp AppMatcher.cpp DockApp.cpp DockConfig.cpp DockContainer.cpp DockDragDropEvent.cpp DockGraphicsScene.cpp DockIcon.cpp DockPanelView.cpp DockProxyView.cpp DockPanel.cpp DockTaskIcon.cpp DockTaskManager.cpp)
 kde4_add_executable(KDock ${KDock_SRCS})
 
-target_link_libraries(KDock ${KDE4_KDEUI_LIBS})
+
+
+target_link_libraries(KDock ${KDE4_KDEUI_LIBS} ${KDE4_KUTILS_LIBS} ${X11_X11_LIB} taskmanager)
 install(TARGETS KDock ${INSTALL_TARGETS_DEFAULT_ARGS})
